# chroma-sdk-lan-proxy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.toml
scripts/: install-autostart.cmd  install-autostart.ps1  start-proxy.ps1  uninstall-autostart.cmd  uninstall-autostart.ps1
src/chroma_sdk_lan_proxy/: __init__.py  __main__.py  cli.py  config.py  server.py
tests/: test_config.py  test_server.py
