[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chroma-sdk-lan-proxy"
version = "0.1.0"
description = "LAN proxy for exposing the local Razer Chroma REST SDK to Home Assistant and other LAN clients."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ha-chroma personal fork maintainers" }
]
keywords = ["razer", "chroma", "home-assistant", "proxy", "lan"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
chroma-sdk-lan-proxy = "chroma_sdk_lan_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
